# weather

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.yaml  package.json  pyproject.toml  vite.config.ts
.github/workflows/: pr.yml
app/: __init__.py  api.py  db.py  exceptions.py  routes.py  settings.py  util.py
app/models/: __init__.py  location.py  measurement.py  temperature.py
app/routes/: __init__.py  location.py  measurement.py
app/services/: location.py  measurement.py
infrastructure/_shared/: main.tf
infrastructure/production/: main.tf
infrastructure/staging/: main.tf
proxy/: nginx.conf
proxy/cert/: weather-local-cert.pem  weather-local-key.pem
tests/integration/: README.md  conftest.py  test_location.py  test_location_api.py
tests/unit/: README.md  test_util.py
tests/unit/models/: test_location.py  test_measurement.py
tools/: env.py  generate_env.py  seed-us-cities.py  setup.py  start.sh
ui/: App.tsx  CityDetails.tsx  api.ts  env.ts  index.css  index.html  package-lock.json  types.ts
